# csc299-project

./: .gitignore  SUMMARY.md  video.txt
tasks2/: README.md  main.py  tasks.json
tasks3/: README.md  pyproject.toml
tasks3/src/tasks3/: __init__.py  app.py  test_tasks.py
tasks3/tests/: test_inc.py
tasks4/: README.md  pyproject.toml
tasks4/src/tasks4/: __init__.py
tasks5/: README.md
