[project]
name = "tasks3"
version = "0.1.0"
description = "Task manager with pytest"
readme = "README.md"
requires-python = ">=3.13"
dependencies = []
scripts = { tasks3 = "tasks3:main" }

[dependency-groups]
dev = [
    "pytest>=9.0.1",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"