[project]
name = "tasks4"
version = "0.1.0"
description = "Task summarizer using OpenAI"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "openai>=1.0.0",
]

[project.scripts]
tasks4 = "tasks4:main"

[build-system]
requires = ["uv_build>=0.9.11,<0.10.0"]
build-backend = "uv_build"
